fix: extra padding in metadata on smaller screen, between the date and authors

--- a/_sass/kids/_typography.scss
+++ b/_sass/kids/_typography.scss
@@ -31,6 +31,7 @@ main {
     }
 
     ul.authors-list {
+      padding: 0;
       margin: 0;
       list-style-type: none;
       display: inline-block;
